--- a/src/components/style/Landing.css
+++ b/src/components/style/Landing.css
@@ -10,7 +10,7 @@
 .user-box {
   width: 15%;
   height: 40%;
-  background-color: white;
+  color: black;
   display: flex;
   border-radius: 15px;
   justify-content: center;
