added catalog per user

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,10 @@
   z-index: -1;
   width: 100vw;
   height: 100vh;
+  overflow: auto;
 }
 
-.button-container {
+.bar-container {
   display: flex;
   position: relative;
 }
