--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,15 @@
   --primery-color: whitesmoke;
 }
 
+#root {
+  position: relative;
+  z-index: 1;
+}
+
 .App {
+  position: relative;
+  z-index: 2;
   background-color: black;
-  z-index: -1;
   width: 100vw;
   height: 100vh;
   overflow: auto;
